2007-05-06  Sven Neumann  <sven@gimp.org>

	* plug-ins/jpeg/jpeg-exif.c (jpeg_apply_exif_data_to_image): only
	check for EXIF_TAG_GPS_VERSION_ID if it's defined (see bug #377917).
	This tag was added in libexif 0.6.13.

2007-05-06  Sven Neumann  <sven@gimp.org>

	* configure.in (AM_INIT_AUTOMAKE): pass dist-bzip2 to automake.

2007-05-06  Sven Neumann  <sven@gimp.org>

	* libgimpbase/Makefile.am (DISTCLEANFILES): clean gimpversion.h.

	* plug-ins/metadata/Makefile.am (CLEANFILES): clean testbase64.

	* po/Makefile.in.in (mostlyclean): clean .intltool-merge-cachemake

	* tools/pdbgen/Makefile.am: use DISTCLEANFILES instead of
	MAINTAINERCLEANFILES.

2007-05-06  Sven Neumann  <sven@gimp.org>

	* tools/defcheck.py: improved path handling. Allow to pass the
	source directory on the command-line.

	* Makefile.am (check-defs): pass $(top_srcdir) to defcheck.py.
	(validate-authors): validate authors.xml in the srcdir.

	* menus/Makefile.am (validate): changed output for consistency.

2007-05-06  Sven Neumann  <sven@gimp.org>

	* Makefile.am (DISTCHECK_CONFIGURE_FLAGS): --enable-gtk-doc
	(EXTRA_DIST): added mkinstalldirs, the po-* Makefiles need it.
	(check-defs): use tools/defcheck.py from $(top_srcdir).

2007-05-06  Simon Budig  <simon@gimp.org>

	* tools/pdbgen/pdb/edit.pdb: make gimp-edit-paste-as-new not fail
	at an empty clipboard, but return -1 as image id.

	* app/pdb/edit_cmds.c
	* libgimp/gimpedit_pdb.c: regenerated.

	* plug-ins/script-fu/scripts/paste-as-brush.scm
	* plug-ins/script-fu/scripts/paste-as-pattern.scm: Changed
	accordingly, fixes bug #357059.

	* modules/controller_linux_input.c: changed some axis names to make
	more sense.

2007-05-06  Sven Neumann  <sven@gimp.org>

	* po-*/Makefile.in.in: reverted last change, it didn't work.

2007-05-06  Sven Neumann  <sven@gimp.org>

	* po-*/Makefile.in.in: include po/Makefile.in.in and override
	@GETTEXT_PACKAGE@ instead of keeping five copies.

2007-05-06  Sven Neumann  <sven@gimp.org>
